Check spelling errors
Change-Id: I20a686eef578291af758e09099e333ef8aaa3b8b
Reviewed-on: http://review.couchbase.org/79757
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/perfrunner/workloads/revAB/fittingCode/README
+++ b/perfrunner/workloads/revAB/fittingCode/README
@@ -108,7 +108,7 @@ After the fitting script is done running, check the corresponding
 dK-2 distance, which indicates the closest synthetic graph.
 
 Example usage (to excluding the pickling process, simple replace
-the occurences of 'fitModel.py' with 'fitModel_noPicking.py'):
+the occurrences of 'fitModel.py' with 'fitModel_noPicking.py'):
 -----------------------------------------------------------
 To run coarse fitting for the Nearest Neighbor model..
 
